--- a/freeCodeCamp/css/style.css
+++ b/freeCodeCamp/css/style.css
@@ -18,13 +18,14 @@
 .red-box {
    background-color: crimson;
    color: #fff;
-   padding: 20px;
-   margin: -15px;
+   padding-top: 40px;
+   padding-right: 20px;
+   padding-bottom: 20px;
+   padding-left: 40px;
 }
 
 .blue-box {
    background-color: blue;
    color: #fff;
-   padding: 20px;
-   margin: -15px;
+   padding: 40px 20px 20px 40px;
 }
