--- a/freeCodeCamp/css/style.css
+++ b/freeCodeCamp/css/style.css
@@ -30,3 +30,31 @@
    padding: 40px 20px 20px 40px;
    margin: 40px 20px 20px 40px;
 }
+
+.red-text {
+   color: red;
+}
+
+h2 {
+   font-family: Lobster, monospace;
+}
+
+p {
+   font-size: 16px;
+   font-family: monospace;
+}
+
+.thick-green-border {
+   border-color: green;
+   border-width: 10px;
+   border-style: solid;
+   border-radius: 50%;
+}
+
+.smaller-image {
+   width: 100px;
+}
+
+.silver-background {
+   background-color: silver;
+}
