--- a/freeCodeCamp/css/style.css
+++ b/freeCodeCamp/css/style.css
@@ -18,10 +18,7 @@
 .red-box {
    background-color: crimson;
    color: #fff;
-   padding-top: 40px;
-   padding-right: 20px;
-   padding-bottom: 20px;
-   padding-left: 40px;
+   padding: 1.5em;
 }
 
 .blue-box {
